--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-
-server.port=8087
-spring.datasource.url=jdbc:mysql://localhost:3306/expenseapp
-spring.datasource.username=root
-spring.datasource.password=Girkanka1.
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.profiles.active=dev
